# costs-n-meters

./: .gitignore  CMakeLists.txt  README.md
doc/: api.adoc
src/: assets.qrc  main.cpp  qml.qrc  qtquickcontrols2.conf
src/qml/: main.qml
src/qml/AppScreens/: qmldir
src/qt/: main.cpp  rc.qrc
src/qt/android/: AndroidManifest.xml  build.gradle
src/qt/android/assets/qml/: main.qml
src/qt/qml/AppScreens/: ScreenHome.qml  ScreenSettings.qml
